Hide any overflow to avoid horizontal scrolling.

--- a/WebContents/style.css
+++ b/WebContents/style.css
@@ -4,6 +4,7 @@
 body {
 	font-family: 'Alegreya', serif;
 	margin: 0;
+	overflow-x:hidden;
 }
 
 h1 {
